fix long word wrap

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -103,6 +103,7 @@ hr {
 
 p {
   margin: 1em 0;
+  overflow-wrap: break-word;
 }
 p:first-child, p:last-child {
   margin: 0;
